# bsf-statemachine

./: .gitignore  CMakeLists.txt  LiftEvent.cpp  LiftEvent.h  PavementMachine.cpp  PavementMachine.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt-example/: CMakeLists.txt  StringTransition.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt-example/state/: LiftIdleState.h
statemachine/: LiftEvent.cpp  LiftEvent.h
statemachine/events/: LiftArrived.cpp  LiftArrived.h  LiftEventData.h  LiftIdle.cpp  LiftIdle.h  LiftMoving.cpp  LiftMoving.h
